# will

./: .gitignore
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: pyproject.toml  zappa_settings.json
backend/app/articles/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
backend/app/articles/management/commands/: bulk_articles.py
backend/app/articles/migrations/: 0001_initial.py  0002_article_is_viewable.py  0003_rename_title_article_book_author_and_more.py  0004_rename_comment_couunt_article_comment_count.py
backend/app/comments/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
backend/app/comments/migrations/: 0001_initial.py  0002_comment_content.py  0003_comment_is_viewable.py  0004_comment_user_id.py  0005_remove_comment_user_id_comment_like_count.py
backend/config/: constants.py  exception.py  models.py  response.py  settings.py  swagger.py  urls.py
frontend/: .env.d.ts  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/mockup/: articles.json  comments.json
frontend/src/: App.tsx  global.css  index.tsx  router.tsx  theme.ts
frontend/src/api/: articles.js  articles.ts  ax.ts
frontend/src/components/Article/: Comment.tsx  Comments.tsx  index.tsx
frontend/src/components/ArticleCard/: index.tsx
frontend/src/components/FloatingBtn/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/PostArticleModal/: index.tsx
frontend/src/pages/Articles/: Detail.tsx
frontend/src/pages/Home/: Home.tsx
